@@ -1,0 +1,15 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x579
+      RenderBlock {DIV} at (0,0) size 784x15
+        RenderBlock (anonymous) at (0,0) size 784x0
+          RenderInline {SPAN} at (0,0) size 0x0
+        RenderBlock (anonymous) at (0,0) size 784x15
+          RenderBlock {PRE} at (0,0) size 784x15
+            RenderText {TEXT} at (0,0) size 792x15
+              text run at (0,0) width 792: "There should only be a focus ring around this contentEditable div, and not a tiny one below as well"
+        RenderBlock (anonymous) at (0,28) size 784x0
+          RenderInline {SPAN} at (0,0) size 0x0
+          RenderText {TEXT} at (0,0) size 0x0
