@@ -1,0 +1,7 @@
+<html>
+<body id="body">
+<div style="outline:auto" id="a">
+<span style="font-weight:bold;"><pre>There should only be a focus ring around this contentEditable div, and not a tiny one below as well</pre></span>
+</div>
+</body>
+</html>
